fix(bootstrap4-theme): landscape card arrangement mobile align

--- a/packages/bootstrap4-theme/src/scss/extends/_card-arrangements.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_card-arrangements.scss
@@ -102,5 +102,10 @@
         }
       }
     }
+    &-vertical {
+      & > .uds-card-arrangement-card-container {
+        margin-left: 0;
+      }
+    }
   }
 }
